깃 오류 수정

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kimsooin77.github.io/reactPf/",
+  "homepage": "https://kimsooin77.github.io/pfBigwood/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": false,
